<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">



    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="570dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/stringLeft"
                android:id="@+id/textViewCalc"
                android:textSize="50sp"/>
        </RelativeLayout>

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button7"
            android:id="@+id/button7"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/button8"
            android:id="@+id/button8"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/button9"
            android:id="@+id/button9"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/buttonDivide"
            android:id="@+id/buttonDivide"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/buttonClear"
            android:id="@+id/buttonClear"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            android:id="@+id/button4"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button5"
            android:id="@+id/button5"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button6"
            android:id="@+id/button6"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonMultiply"
            android:id="@+id/buttonMultiply"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonDelete"
            android:id="@+id/buttonDelete"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:id="@+id/button1"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:id="@+id/button2"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonMinus"
            android:id="@+id/buttonMinus"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonPlusOrMinus"
            android:id="@+id/buttonPlusOrMinus"
            android:layout_weight="1"
            android:visibility="visible" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button0"
            android:id="@+id/button0"
            android:layout_weight="1.99" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonDecimal"
            android:id="@+id/buttonDecimal"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonPlus"
            android:id="@+id/buttonPlus"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonEquals"
            android:id="@+id/buttonEquals"
            android:layout_weight="1" />

    </TableRow>
</LinearLayout>